fixing viewport issues on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -19,8 +19,7 @@
 }
 
 html {
-  width: 100%;
-  height: 100%;
+  width: 100vw;
   min-width: 800px;
   margin: 0;
   padding: 0;
